dc.yaml
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  annotations:
    openshift.io/generated-by: OpenShiftNewApp
  creationTimestamp: null
  generation: 1
  labels:
    app: test
  name: test
  selfLink: /apis/apps.openshift.io/v1/namespaces/test/deploymentconfigs/test
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    app: test
    deploymentconfig: test
  strategy:
    activeDeadlineSeconds: 21600
    resources: {}
    rollingParams:
      intervalSeconds: 1
      maxSurge: 25%
      maxUnavailable: 25%
      timeoutSeconds: 600
      updatePeriodSeconds: 1
    type: Rolling
  template:
    metadata:
      annotations:
        openshift.io/generated-by: OpenShiftNewApp
      creationTimestamp: null
      labels:
        app: test
        deploymentconfig: test
    spec:
      containers:
      - env:
        - name: COUNTRY
          valueFrom:
            configMapKeyRef:
              key: COUNTRY
              name: myconfigmap
        - name: LANGUAGE
          valueFrom:
            configMapKeyRef:
              key: LANGUAGE
              name: myconfigmap
        - name: USERNAME
          valueFrom:
            secretKeyRef:
              key: username
              name: mysecret
        - name: PASSWORD
          valueFrom:
            secretKeyRef:
              key: password
              name: mysecret
        image: docker-registry.default.svc:5000/test/test@sha256:a0108f9d7d57ea0ec5c983c2d57f7e93ed978ae157e3771d93146f24885eb1ec
        imagePullPolicy: Always
        name: test
        ports:
        - containerPort: 8080
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
  test: false
  triggers:
  - type: ConfigChange
  - imageChangeParams:
      automatic: true
      containerNames:
      - test
      from:
        kind: ImageStreamTag
        name: test:latest
        namespace: test
    type: ImageChange
status:
  availableReplicas: 0
  latestVersion: 0
  observedGeneration: 0
  replicas: 0
  unavailableReplicas: 0
  updatedReplicas: 0
